--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ name = "hex-minesweeper"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+# `opt-level = 'z'` sometimes gives smaller size than 's', but it depends on the exact case
+opt-level = 's'
 
 [dependencies]
 # Keep only what is really used to keep binary small and compilation fast
@@ -13,12 +15,12 @@ bevy = { version = "0.11.0", default-features = false, features = [
   "bevy_sprite",
   "bevy_winit",
   "multi-threaded",
+  "webgl2",
   # Might be used in the future
   # "bevy_audio",
   # "bevy_text",
   # "bevy_ui",
   # "default_font",
   # "png",
-  # "webgl2",
 ] }
 hexx = "0.9.2"
