--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,12 @@ bevy = { version = "0.11.0", default-features = false, features = [
   "bevy_sprite",
   "bevy_winit",
   "multi-threaded",
+  "png",
   "webgl2",
   # Might be used in the future
   # "bevy_audio",
   # "bevy_text",
   # "bevy_ui",
   # "default_font",
-  # "png",
 ] }
 hexx = "0.9.2"
