--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ bevy = { version = "0.11.0", default-features = false, features = [
   "bevy_winit",
   "multi-threaded",
   "png",
+  "wayland", # For linux support on CI
   "webgl2",
   # Might be used in the future
   # "bevy_audio",
