add license to the cargo toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "hex-minesweeper"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
 
 [profile.release]
 # `opt-level = 'z'` sometimes gives smaller size than 's', but it depends on the exact case
