--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -40,6 +40,8 @@ jobs:
       - run: cargo build --release --target wasm32-unknown-unknown
       - run: cargo install wasm-bindgen-cli
       - run: wasm-bindgen --out-dir ./site/ --target web ./target/wasm32-unknown-unknown/release/hex-minesweeper.wasm
+      - name: Move assets into site folder
+        run: mv assets site/
       - uses: actions/upload-pages-artifact@v1
         with:
           path: "./site"
