--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -38,7 +38,7 @@ jobs:
             ${{ runner.os }}-wasm32-
       - run: rustup target add wasm32-unknown-unknown
       - run: cargo build --release --target wasm32-unknown-unknown
-      - run: cargo install wasm-bindgen-cli
+      - run: cargo install wasm-bindgen-cli --target-dir target/
       - run: wasm-bindgen --out-dir ./site/ --target web ./target/wasm32-unknown-unknown/release/hex-minesweeper.wasm
       - name: Move assets into site folder
         run: mv assets site/
